# gift-finder

./: .env.example  .gitignore  DEPLOYMENT.md  Makefile  PRODUCTION_CHECKLIST.md  QUICKSTART.md  RUNBOOK.md  docker-compose.override.yml.example  docker-compose.prod.yml.example  docker-compose.yml
.claude/: settings.json
.full-stack-feature/: 01-requirements.md  02-database-design.md  03-architecture.md  04-database-impl.md  05-backend-impl.md  06-frontend-impl.md  07-testing.md  08-deployment.md  09-documentation.md  state.json
.github/: DEPLOYMENT_SECRETS.md
.github/workflows/: ci.yml  deploy.yml
backend/: alembic.ini  pyproject.toml  seed_data.py
backend/app/: __init__.py  dependencies.py  main.py  middleware.py
backend/app/adapters/: __init__.py  amazon.py  base.py  etsy.py  generic_html.py  registry.py
backend/app/api/: __init__.py  rate_limit.py
backend/app/api/v1/: auth.py  health.py  items.py  recommendations.py  router.py  search.py  wishlists.py
backend/app/api/v1/admin/: __init__.py  cron.py  ingestion.py  review_queue.py  taxonomy.py
backend/app/core/: __init__.py  config.py  database.py  exceptions.py  logging.py  redis.py  safe_http.py  security.py
backend/app/integrations/: __init__.py  instagram_client.py  openai_client.py  s3_client.py
backend/app/migrations/: env.py  script.py.mako
backend/app/migrations/versions/: 001_initial_schema.py  002_hnsw_index.py
backend/app/models/: __init__.py  admin.py  base.py  catalog.py  enums.py  ingestion.py  taxonomy.py  user.py
backend/app/repositories/: __init__.py  base.py  instagram.py  items.py  recommendations.py  scraper_jobs.py  tags.py  unit_of_work.py  wishlists.py
backend/app/schemas/: __init__.py  auth.py  common.py  cron.py  ingestion.py  items.py  recommendations.py  review_queue.py  search.py  taxonomy.py  wishlists.py
backend/app/services/: __init__.py  auth_service.py  cron_scheduler_service.py  instagram_ingestion_service.py  item_service.py  manual_ingestion_service.py  recommendation_service.py  review_queue_service.py  scraper_orchestrator.py  search_service.py  taxonomy_service.py  wishlist_service.py
backend/app/workers/: __init__.py  celery_app.py
backend/app/workers/tasks/: __init__.py  embed.py  instagram.py  recommendations.py  scrape.py
backend/docker/: Dockerfile  Dockerfile.worker
backend/tests/: conftest.py  test_migrations.py
backend/tests/integration/: test_admin_endpoints.py  test_auth_endpoints.py  test_items_endpoints.py  test_scraper_jobs.py  test_wishlists_endpoints.py
backend/tests/unit/: test_item_service.py  test_manual_ingestion.py  test_review_queue_service.py  test_scraper_orchestrator.py  test_search_service.py  test_security.py  test_taxonomy_service.py  test_wishlist_service.py
docs/: api.md  architecture-decisions.md  handoff.md  schema.md
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/src/app/admin/: layout.tsx  page.tsx
frontend/src/app/discover/: loading.tsx  page.tsx
frontend/src/app/search/: page.tsx
frontend/src/app/wishlists/: page.tsx
frontend/src/providers/: AuthProvider.tsx  QueryProvider.tsx
monitoring/: alerts.yml
(+46 files in other folders)
