[project]
name = "gift-finder-backend"
version = "0.1.0"
description = "Gift Finder backend API and database layer"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
    { name = "Gift Finder Team" },
]

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",

    # Database / ORM
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pgvector>=0.3.6",

    # Validation / settings
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",

    # Auth
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "pyjwt>=2.10.0",

    # Caching / queue
    "redis[hiredis]>=5.2.0",

    # AWS S3
    "boto3>=1.35.0",
    "aioboto3>=13.2.0",

    # OpenAI (embeddings)
    "openai>=1.54.0",

    # HTTP client
    "httpx>=0.27.0",

    # Observability
    "structlog>=24.4.0",

    # Background tasks
    "celery[redis]>=5.4.0",
    "celery-redbeat>=2.2.0",

    # HTML scraping
    "beautifulsoup4>=4.12.0",

    # Image processing
    "Pillow>=11.0.0",

    # Rate limiting
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "types-passlib>=1.7.7",
    "factory-boy>=3.3.0",
    "faker>=30.0.0",
    # SQLite async driver for in-memory tests (no PostgreSQL needed in CI)
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ----------------------------- Tooling --------------------------------

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # function calls in argument defaults (FastAPI Depends)
]

[tool.ruff.lint.per-file-ignores]
"app/migrations/versions/*.py" = ["E402", "F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["pgvector.*", "passlib.*", "jose.*", "aioboto3.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
python_files = "test_*.py"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]

[tool.coverage.run]
branch = true
source = ["app"]
omit = ["app/migrations/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 85
